--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8089
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 spring.datasource.name=blogDB
@@ -8,3 +8,5 @@ spring.datasource.password=WO/9938ee
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+pagehelper.dialect=com.github.pagehelper.dialect.helper.MySqlDialect
