--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password=WO/9938ee
 
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#server.ssl.key-store=keystore.p12
+#server.ssl.key-store-password=WO/9938ee
+#server.ssl.keyStoreType=PKCS12
+#server.ssl.keyAlias:tomcat
